# flox-core

./: .gitignore  pyproject.toml
.github/workflows/: release.yml
floxcore/: __init__.py  config.py  context.py  exceptions.py  plugin.py  secrets.py  ui.py
