[tool.poetry]
name = "flox-core"
version = "0.1.0"
description = "Core library for flox"
authors = ["Michal Przytulski <michal@przytulski.pl>", "Daniel Ancuta <whisller@gmail.com>"]
license = "MIT"

packages = [
    { include = "floxcore" }
]

[tool.poetry.dependencies]
python = "^3.8"
python-box = "^5.3"
anyconfig = "^0.10"
wasabi = "^0.8"
tqdm = "^4.58"
click = "^7.1"
lazy-load = "^0.8.2"
loguru = "^0.5"
plumbum = "^1.7"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.7.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
