[tool.poetry]
name = "flox-core"
version = "0.2.0"
description = "Core library for flox"
authors = ["Michal Przytulski <michal@przytulski.pl>", "Daniel Ancuta <whisller@gmail.com>"]
license = "MIT"

packages = [
    { include = "floxcore" }
]

[tool.poetry.dependencies]
python = "^3.8"
wasabi = "^1.1"
tqdm = "^4.64.1"
loguru = "^0.6.0"
rich = "^13.3.1"
pyyaml = "^6.0"
#python-box = "^5.3"
#anyconfig = "^0.10"

#tqdm = "^4.58"
#click = "^7.1"
#lazy-load = "^0.8.2"
#loguru = "^0.5"
#plumbum = "^1.7"
#toml = "^0.10.2"
python-box = "^6.1.0"
pyhumps = "^3.8.0"


[tool.poetry.dev-dependencies]
black = "^23.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
